[gd_scene load_steps=4 format=3 uid="uid://cyvh721f8spv"]

[ext_resource type="Script" path="res://classes/level_navigation_panel_class/level_navigation_panel.gd" id="1_k8wlo"]
[ext_resource type="Texture2D" uid="uid://clhtvcwjlvldo" path="res://assets/ui/images/arrow.png" id="1_qa0u5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2uhcf"]
size = Vector2(128, 1080)

[node name="LevelNavigationPanel" type="Node2D"]
script = ExtResource("1_k8wlo")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(1848, 544)
texture = ExtResource("1_qa0u5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1856, 540)
shape = SubResource("RectangleShape2D_2uhcf")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
